...
    private var cancellables = Set<AnyCancellable>()
    private var comments: [Comment] = []

    init(viewModel: CommentsViewModel) {
        self.viewModel = viewModel
        super.init(style: .plain)
        title = "Comments"
        navigationItem.largeTitleDisplayMode = .never
        navigationItem.rightBarButtonItem = UIBarButtonItem(
            image: UIImage(systemName: "arrowshape.turn.up.left"),
            primaryAction: UIAction { [weak self] _ in self?.viewModel.replyTapped() })
    }

...
